# QuantumQA

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assets/: api_endpoints.json  checkout.html  product_specs.md  ui_ux_guide.txt
backend/: ingest.py  rag.py  script_generation.py  selectors.py
ui/: streamlit_app.py
